# quant-realtime-backtest-framework

./: LICENSE  README.md  pyproject.toml
lob_arena/: cli.py
lob_arena/core/: orderbook.py
lob_arena/strategies/: base.py
lob_arena/strategies/lob_arena/: arena.py
